fixed text-align in services div

--- a/wp_book_me/public/css/style.css
+++ b/wp_book_me/public/css/style.css
@@ -288,3 +288,7 @@ html, body {
     color: #A7CC76;
     padding: 5px;
 }
+
+.tdCheckboxe{
+    text-align: right;
+}
